--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,9 @@
   --colorLetterButton: #fffffe;
   --colorInput: #fffffe;
   --colorLetterInput: #2b2c34;
+  --colorCard: #2cb67d;
+  --colorLetterCard: #fffffe;
+  --colorCardEmpty:#ff6961;
 }
 
 body {
@@ -13,7 +16,6 @@ body {
   height: 100vh;
   margin: 0;
   padding: 0;
-  background-color: rebeccapurple;
 }
 
 .content-primary {
@@ -32,8 +34,8 @@ body {
 
 .countdown__title {
   max-width: 100%;
-  color: var(--colorLetter);
   margin: 0% 0%;
+  color: var(--colorLetter);
   font-size: 5rem;
   text-align: center;
 }
@@ -97,6 +99,82 @@ body {
   color: var(--colorLetterButton);
 }
 
+.finish--active,
+.empty--active {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  margin: 0%;
+  opacity: 1;
+  transition: opacity 300ms ease-in;
+}
+
+.finish--active {
+  background-color: var(--colorCard);
+  color: var(--colorLetterCard);
+}
+
+.empty--active {
+  background-color: var(--colorCardEmpty);
+  color: var(--colorLetterCard);
+}
+
+.empty--inactive,
+.finish--inactive {
+  z-index: -1;
+  opacity: 0;
+  transition-duration: 300ms, 500ms;
+  transition-property: opacity, z-index;
+}
+
+.finish-title,
+.empty-title {
+  margin: 2% 0%;
+  text-align: center;
+}
+
+.empty__button--inactive-js,
+.finish__button--inactive-js {
+  display: block;
+  overflow: hidden;
+  width: 20%;
+  height: 5%;
+  border: none;
+  border-radius: 2px;
+  background-color: var(--colorButton);
+  color: var(--colorLetterButton);
+  outline: none;
+  transition: transform 300ms ease;
+}
+
+.finish__button--inactive-js:hover,
+.finish__button--inactive-js:focus {
+  transition: transform 300ms ease;
+  transform: scale(1.05, 1.05);
+}
+
+@media (prefers-reduced-motion) {
+  .finish__button--inactive-js,
+  .finish__button--inactive-js:hover,
+  .finish__button--inactive-js:hover::after,
+  .finish__button--inactive-js:hover::before,
+  .finish__button--inactive-js:focus,
+  .finish__button--inactive-js:focus::after,
+  .finish__button--inactive-js:focus::before,
+  .finish--active,
+  .finish--inactive {
+    transition: none;
+    transform: none;
+  }
+}
+
 @media screen and (max-width: 480px) {
   .countdown__title {
     width: 100%;
@@ -107,6 +185,7 @@ body {
     width: 100%;
     height: 20%;
   }
+
   .coutdown__content-input {
     width: 20%;
     height: 100%;
@@ -115,5 +194,9 @@ body {
 
   .countdown__button {
     width: 25%;
+  }
+
+  .finish__button--inactive-js {
+    width: 60%;
   }
 }
